--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </main>
 
     <footer class="mt-auto text-white-50">
-      <p class="text-light" id="#contact">Reach us at: info @ sugyapt . com</p>
+      <p class="text-light" id="#contact">Reach us at: info @ sugyapt . co . in</p>
     </footer>
   </div>
 
