--- a/index.html
+++ b/index.html
@@ -34,29 +34,9 @@
 <body class="d-flex h-100 text-center">
 
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <header class="mb-auto">
-      <div>
-        <h3 class="float-md-start mb-0">suGYAPT</h3>
-        <ul class="nav justify-content-end">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </header>
-
     <main class="px-3">
-      <h1>ICT solutions</h1>
-      <p class="lead">Leveraging state-of-the-art technologies<br />
-        Backed by field proven experience</p>
+      <h1>suGYAPT</h1>
     </main>
-
-    <footer class="mt-auto text-white-50">
-      <p class="text-light" id="#contact">Reach us at: info @ sugyapt . co . in</p>
-    </footer>
   </div>
 
 </body>
