--- a/index.html
+++ b/index.html
@@ -1,44 +1,28 @@
-<!doctype html>
-<html lang="en" class="h-100">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="suGYAPT">
   <title>suGYAPT</title>
-
-  <link rel="canonical" href="https://www.sugyapt.com">
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
   <style>
-    body {
-      text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-      box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-      background-color: rgb(194, 170, 65);
-      color: maroon;
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background-color: #FAFAD2; /* Light golden background */
+      display: flex;
+      justify-content: center; /* Horizontal center */
+      align-items: center;     /* Vertical center */
     }
-
-    .cover-container {
-      max-width: 42em;
-    }
-
-    .nav-link {
-      color: rgb(97, 7, 7);
+    .centered-word {
+      font-size: 3em;
+      font-family: sans-serif;
     }
   </style>
 </head>
-
-<body class="d-flex h-100 text-center">
-
-  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <main class="px-3">
-      <h1>suGYAPT</h1>
-    </main>
-  </div>
-
+<body>
+  <div class="centered-word">suGYAPT</div>
 </body>
-
 </html>
